Add font with fontface

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="logo-container">
         <img src="img/odin-lined.png" alt="Logo" class="logo-image">
-        <h1>FURKAN</h1>
+        <h1 class="logo-header">FURKAN</h1>
     </div>
     <div class="form-container">
       <p>
