--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                   maxlength="20"
                   required
                 />
+                <span></span>
               </div>
               <div>
                 <label for="confirmpwd">CONFIRM PASSWORD</label>
@@ -84,9 +85,7 @@
         </button>
       </form>
       <span class="log-in-container"
-        >Already have an account?
-        <span class="log-in-button">Log in</span></span
-      >
+        >Already have an account? <a href="#" class="log-in-link">Log in</a>
     </div>
   </body>
 </html>
