Fix formatting problem in index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
         </button>
       </form>
       <span class="log-in-container"
-        >Already have an account? <a href="#" class="log-in-link">Log in</a>
+        >Already have an account?
+        <a href="#" class="log-in-link">Log in</a></span
+      >
     </div>
   </body>
 </html>
