Add ref to author, thanks Eugene Golovesov

--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="logo-container">
-      <img src="img/odin-lined.png" alt="Logo" class="logo-image" />
-      <h1 class="logo-header">FURKAN</h1>
+    <div class="left-container">
+      <div class="logo-container">
+        <img src="img/odin-lined.png" alt="Logo" class="logo-image" />
+        <h1 class="logo-title">FURKAN</h1>
+      </div>
+      <p class="ref-to-author">
+        Photo by
+        <a
+          href="https://unsplash.com/@eugene_golovesov?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+          >Eugene Golovesov</a
+        >
+        on
+        <a
+          href="https://unsplash.com/photos/brown-plant-in-close-up-photography-y6OwxwYKSQE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+          >Unsplash</a
+        >
+      </p>
     </div>
     <div class="form-container">
       <p class="introduction">
